--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,7 +12,7 @@
 
 * {
   margin:0;
-  font-family: Helvetica;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -37,6 +37,7 @@ header .logo {
 header ul {
   float: right;
   margin-right: 3rem;
+  padding: 0;
 }
 
 header li {
@@ -93,8 +94,66 @@ header li a:hover {
   transition: 500ms;
 }
 
+#toggle-nav, label #open-nav, label #close-nav {
+  display: none;
+}
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  width: 18rem;
+  height: 100%;
+  background-color: white;
+  transition: all 300ms ease;
+  border: solid black;
+}
+
+.sidebar * {
+  text-decoration: none;
+  list-style: none;
+  font-size: 24px;
+  padding: 0;
+}
+
+.sidebar .header-nav {
+  padding-left: 3rem;
+  line-height: 6rem;
+  color: var(--main-color);
+  border-bottom: 1px solid var(--border-color);
+}
+
+.sidebar ul a {
+  display: block;
+  box-sizing: border-box;
+  padding-left: 3rem;
+  line-height: 5rem;
+  width: 100%;
+  height: 100%;
+  color: var(--normal-grey);
+  border-right: 0 solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  transition: 500ms;
+}
+
+.sidebar ul i {
+  text-align: center;
+  width: 2rem;
+}
+
+.sidebar ul a:hover {
+  padding-left: 4rem;
+  color: var(--main-color);
+  border-right: 1rem solid var(--main-color);
+  transition: 300ms;
+}
+
+main, footer {
+  margin-top: 1rem;
+  margin-left: 20rem;
+}
+
 @media (max-width: 768px) {
-  header .logo {margin-left: 1rem;}
+  header .logo {margin-left: 5.5rem;}
   header ul {margin-right: 1rem;}
   header li {margin: 0 0.2rem;}
   header .new-post-button span {display: none;}
@@ -102,4 +161,27 @@ header li a:hover {
   header .profile-name {display: none;}
   header .profile-picture {border: 2px solid var(--border-color);}
   header .profile-picture:hover {border-color: var(--hover-border-color); transition: 500ms;}
+  main, footer {margin-left: 3rem;}
+  label #open-nav, label #close-nav {
+    position: fixed;
+    top: 1.4rem;
+    left: 1rem;
+    font-size: 40px;
+    width: 2.4rem;
+    text-align: center;
+    padding: 0.3rem 0.5rem;
+    border: 2px solid var(--border-color);
+    border-radius: 0.5rem;
+  }
+
+  label #open-nav {display: inline-block;}
+  #toggle-nav:checked ~ label #open-nav{display: none;}
+  #toggle-nav:checked ~ label #close-nav{display: inline-block;}
+
+  .sidebar {
+    left: -20rem;
+  }
+  #toggle-nav:checked ~ .sidebar {
+    left: 0;
+  }
 }
