--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -15,15 +15,20 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  background-color: var(--light-grey);
+}
+
 header {
   height: 6rem;
   width: 100%;
-  border-bottom: solid black;
+  background-color: white;
 }
 
 header * {
   text-decoration: none;
   list-style: none;
+  user-select: none;
 }
 
 header .logo {
@@ -105,7 +110,6 @@ header li a:hover {
   height: 100%;
   background-color: white;
   transition: all 300ms ease;
-  border: solid black;
 }
 
 .sidebar * {
@@ -113,6 +117,7 @@ header li a:hover {
   list-style: none;
   font-size: 24px;
   padding: 0;
+  user-select: none;
 }
 
 .sidebar .header-nav {
@@ -161,7 +166,9 @@ main, footer {
   header .profile-name {display: none;}
   header .profile-picture {border: 2px solid var(--border-color);}
   header .profile-picture:hover {border-color: var(--hover-border-color); transition: 500ms;}
+
   main, footer {margin-left: 3rem;}
+  
   label #open-nav, label #close-nav {
     position: fixed;
     top: 1.4rem;
@@ -172,6 +179,7 @@ main, footer {
     padding: 0.3rem 0.5rem;
     border: 2px solid var(--border-color);
     border-radius: 0.5rem;
+    cursor: pointer;
   }
 
   label #open-nav {display: inline-block;}
