--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,14 +1,4 @@
-:root {
-  --light-grey: #e3e3e3;
-  --normal-grey: #5e5e5e;
-  --light-blue: #97cdff;
-  --normal-blue: #2898FF;
-  --dark-blue: #006acd;
-  --main-color: var(--normal-blue);
-  --border-color: var(--light-grey);
-  --hover-border-color: var(--light-blue);
-  --hover-dark-color: var(--dark-blue);
-}
+@import "./theme.css";
 
 * {
   margin:0;
@@ -17,179 +7,4 @@
 
 body {
   background-color: var(--light-grey);
-}
-
-header {
-  height: 6rem;
-  width: 100%;
-  background-color: white;
-}
-
-header * {
-  text-decoration: none;
-  list-style: none;
-  user-select: none;
-}
-
-header .logo {
-  color: var(--main-color);
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 6rem;
-  margin-left: 3rem;
-}
-
-header ul {
-  float: right;
-  margin-right: 3rem;
-  padding: 0;
-}
-
-header li {
-  display: inline-block;
-  line-height: 6rem;
-  margin: 0 0.5rem;
-}
-
-header li a{
-  color: var(--normal-grey);
-  font-size: 18px;
-  padding: 0.6rem 0.8rem;
-  border: 2px solid var(--border-color);
-  border-radius: 30px;
-}
-
-header .new-post-button {
-  background-color: var(--main-color);
-  color: white;
-  border: none;
-}
-
-header .new-post-button span {
-  padding-left: 0.3rem;
-}
-
-header .profile-button {
-  margin-right: 0;
-  padding-right: 0;
-}
-
-header .profile-name {
-  margin-right: 0.2rem;
-}
-
-header .profile-picture {
-  display: inline-block;
-  background-color: var(--light-grey);
-  transform: translateY(0.88rem);
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 50%;
-}
-
-header .new-post-button:hover {
-  color: white;
-  background-color: var(--hover-dark-color);
-  transition: 500ms;
-}
-
-header li a:hover {
-  color: var(--main-color);
-  border-color: var(--hover-border-color);
-  transition: 500ms;
-}
-
-#toggle-nav, label #open-nav, label #close-nav {
-  display: none;
-}
-
-.sidebar {
-  position: fixed;
-  left: 0;
-  width: 18rem;
-  height: 100%;
-  background-color: white;
-  transition: all 300ms ease;
-}
-
-.sidebar * {
-  text-decoration: none;
-  list-style: none;
-  font-size: 24px;
-  padding: 0;
-  user-select: none;
-}
-
-.sidebar .header-nav {
-  padding-left: 3rem;
-  line-height: 6rem;
-  color: var(--main-color);
-  border-bottom: 1px solid var(--border-color);
-}
-
-.sidebar ul a {
-  display: block;
-  box-sizing: border-box;
-  padding-left: 3rem;
-  line-height: 5rem;
-  width: 100%;
-  height: 100%;
-  color: var(--normal-grey);
-  border-right: 0 solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
-  transition: 500ms;
-}
-
-.sidebar ul i {
-  text-align: center;
-  width: 2rem;
-}
-
-.sidebar ul a:hover, .sidebar ul .active a{
-  padding-left: 4rem;
-  color: var(--main-color);
-  border-right: 1rem solid var(--main-color);
-  transition: 300ms;
-}
-
-main, footer {
-  margin-top: 1rem;
-  margin-left: 20rem;
-}
-
-@media (max-width: 768px) {
-  header .logo {margin-left: 5.5rem;}
-  header ul {margin-right: 1rem;}
-  header li {margin: 0 0.2rem;}
-  header .new-post-button span {display: none;}
-  header .profile-button {padding: 0; border: none;}
-  header .profile-name {display: none;}
-  header .profile-picture {border: 2px solid var(--border-color);}
-  header .profile-picture:hover {border-color: var(--hover-border-color); transition: 500ms;}
-
-  main, footer {margin-left: 3rem;}
-
-  label #open-nav, label #close-nav {
-    position: fixed;
-    top: 1.4rem;
-    left: 1rem;
-    font-size: 40px;
-    width: 2.4rem;
-    text-align: center;
-    padding: 0.3rem 0.5rem;
-    border: 2px solid var(--border-color);
-    border-radius: 0.5rem;
-    cursor: pointer;
-  }
-
-  label #open-nav {display: inline-block;}
-  #toggle-nav:checked ~ label #open-nav{display: none;}
-  #toggle-nav:checked ~ label #close-nav{display: inline-block;}
-
-  .sidebar {
-    left: -20rem;
-  }
-  #toggle-nav:checked ~ .sidebar {
-    left: 0;
-  }
 }
