--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@section Stylesheets {
+    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+}
+
+<div class="search-section">
+    <button type="button" class="filter"><i class="fa-solid fa-sliders"></i></button>
+    <form class="search-box" asp-area="" asp-controller="" asp-action="Index">
+        <i class="fa-solid fa-search"></i>
+        <input type="text" name="search" placeholder="Search for anything...">
+    </form>
 </div>
