--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,5 +6,13 @@
 }
 
 body {
-  background-color: var(--light-grey);
+  background-color: var(--bg-color);
+}
+
+main, footer {
+    margin-left: 18rem;
+}
+
+@media (max-width: 768px) {
+  main, footer {margin-left: 0;}
 }
