--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,11 +28,22 @@
                 <a class="notification-button" asp-area="" asp-controller="Event" asp-action=""><i class="fa-solid fa-bell"></i></a>
             </li>
             <li>
-                <a class="profile-button" asp-area="" asp-controller="Event" asp-action="">
-                    <span class="profile-name">Something Name</span>
-                    <div class="profile-picture">
-                        
-                    </div>
+                <a class="profile-button" asp-area="" asp-controller="User" asp-action="MyProfile">
+                    @{
+                    @* var user = ViewContext.HttpContext.Session.Get("UserId"); *@
+                    var user = "Something Tester";
+                    if (user != null) {
+                        <span class="profile-name">@user</span>
+                        <div class="profile-picture">
+                            <img alt="Profile picture" src="~/img/default.jpg" draggable="false">
+                        </div>
+                    }
+                    else {
+                        <span class="profile-name">Login</span>
+                        <div class="profile-picture">
+                        </div>
+                    }
+                    }
                 </a>
             </li>
         </ul>
@@ -51,7 +62,7 @@
                 <a class="home-nav" asp-area="" asp-controller="Event" asp-action="Index"><i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li>
-                <a class="my-profile-nav" asp-area="" asp-controller="" asp-action=""><i class="fa-solid fa-address-card"></i> My Profile</a>
+                <a class="my-profile-nav" asp-area="" asp-controller="User" asp-action="MyProfile"><i class="fa-solid fa-address-card"></i> My Profile</a>
             </li>
             <li>
                 <a class="my-post-nav" asp-area="" asp-controller="" asp-action=""><i class="fa-solid fa-calendar"></i> My Post</a>
