remove: home search bar

--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -6,10 +6,6 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 }
 
-<div class="search-section">
+<div class="filter-section">
     <button type="button" class="filter"><i class="fa-solid fa-sliders"></i></button>
-    <form class="search-box" asp-area="" asp-controller="" asp-action="Index">
-        <i class="fa-solid fa-search"></i>
-        <input type="text" name="search" placeholder="Search for anything...">
-    </form>
 </div>
