--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -1,11 +1,10 @@
 @import "./theme.css";
 
-.search-section {
+.filter-section {
     margin: 1rem 2rem;
-    /* display: inline-block; */
 }
 
-.filter, .search-box {
+.filter {
   display: inline-block;
   background-color: white;
   color: var(--normal-grey);
@@ -19,29 +18,10 @@
     cursor: pointer;
 }
 
-.search-box {
-  margin-left: 0.5rem;
-}
-
-input[name=search] {
-  font-size: 18px;
-  width: 30rem;
-  border: none;
-  margin: 0 0.3rem;
-}
-
-input[name=search]:focus {
-  outline:none;
-}
-
 .filter:hover {
   color: var(--main-color);
   border-color: var(--hover-border-color);
   transition: 500ms;
-}
-
-@media (max-width: 992px) {
-  input[name=search] {width: 16rem;}
 }
 
 @media (max-width: 768px) {
