feat: get event data in home view

--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 }
 
+<div>
 <div class="filter-section">
     <button type="button" class="filter"><i class="fa-solid fa-sliders"></i></button>
+</div>
+
+<partial name="../Shared/_EventBannerPartial.cshtml" />
 </div>
