feat: 1st attempt styling event banner

--- a/Views/Event/Index.cshtml
+++ b/Views/Event/Index.cshtml
@@ -4,12 +4,11 @@
 
 @section Stylesheets {
     <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/banner.css" asp-append-version="true" />
 }
 
-<div>
 <div class="filter-section">
     <button type="button" class="filter"><i class="fa-solid fa-sliders"></i></button>
 </div>
 
 <partial name="../Shared/_EventBannerPartial.cshtml" />
-</div>
