--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -1,24 +1,25 @@
 @model PaginationResponse<HaBuddies.Models.Event>
-
-@{
-    Dictionary<string, string> iconDict = new Dictionary<string, string>();
-    iconDict.Add("Meeting", "<i class=\"fa-solid fa-heart\"></i>");
-    iconDict.Add("Exercise", "<i class=\"fa-solid fa-dumbbell\"></i>");
-}
+@using HaBuddies.Constants
 
 @if (Model.Count > 0) {
     @foreach (HaBuddies.Models.Event evt in Model.Data)
     {
         if (evt.isOpen == true) {
+            var category = evt.category;
+            
             <div class="banner">
                 <div class="evt-heading">
-                    <span class="evt-category">@Html.Raw(iconDict[evt.category]) category = @evt.category</span>
-                    <span class="evt-title">title = @evt.title</span>
-                    <span class="evt-enrollsize">enrollSize = @evt.enrollSize</span>
+                    <div class="category" style="background-color: @Category.GetColorHex(category)">
+                        @Html.Raw(Category.GetIconHtml(category))
+                        <span class="evt-category">@category</span>
+                    </div>
+                    <span class="evt-title">@evt.title</span>
+                    <span class="evt-enrollsize">@evt.enrollSize</span>
                 </div>
                 <div class="evt-body">
-                    <div class="evt-description">description = @evt.description</div>
-                    <div class="evt-enddate">endDate = @evt.endDate</div>
+                    <div class="evt-description">@evt.description</div>
+                    <div class="evt-enddate">End Date<br>@evt.endDate</div>
+                    <button type="button" class="evt-join">เข้าร่วม</button>
                 </div>
             </div>
         }
