--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -1,37 +1,55 @@
 @import "./theme.css";
 
 .banner {
-    position: relative;
     display: block;
     margin-left: 2rem;
     margin-right: 3rem;
     margin-bottom: 1.5rem;
     background-color: white;
     --xpadding: 2rem;
+    --xpaddingSmall: 1rem;
 }
 
 .banner .evt-heading {
-    height: 3rem;
-    padding: 0 var(--xpadding);
+    height: auto;
+    padding: 0.6rem var(--xpadding);
+    display: grid;
+    grid-template-columns: max-content 1fr max-content;
+    grid-template-rows: max-content max-content;
+    column-gap: 1rem;
+    max-width: 100%;
+    align-items: center;
 }
 
 .banner .evt-heading * {
-    line-height: 3rem;
+    font-size: 18px;
 }
 
-.banner .evt-category {
-    display: inline-block;
+.banner .evt-heading *:not(i) {
+    font-weight: 500;
+}
+
+.banner .evt-heading i {
+    margin-right: 0.2rem;
+}
+
+.banner .category {
+    grid-area: 1 / 1 / 3 / 2;
+    border-radius: 25px;
+    padding: 0.8rem 1rem;
+    color: white;
+    justify-self: start
 }
 
 .banner .evt-title {
-    display: inline-block;
+    grid-area: 1 / 2 / 3 / 3;
+    font-size: 22px;
+    justify-self: start
 }
 
 .banner .evt-enrollsize {
-    position: absolute;
-    top: 0;
-    right: var(--xpadding);
-    display: inline-block;
+    grid-area: 1 / 3 / 3 / 4;
+    justify-self: end;
 }
 
 .banner .evt-body {
@@ -44,4 +62,12 @@
 
 .banner .evt-enddate {
     display: inline-block;
+}
+
+@media (max-width: 768px) {
+    .banner .evt-heading { padding: 0.3rem var(--xpaddingSmall); }
+    .banner .evt-body { padding: 1rem var(--xpaddingSmall); }
+    .banner .category { grid-area: 1 / 1 / 2 / 2; }
+    .banner .evt-title { grid-area: 2 / 1 / 3 / 4; }
+    .banner .evt-enrollsize { grid-area: 1 / 3 / 2 / 4; }
 }
