--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -6,6 +6,7 @@
     margin-right: 3rem;
     margin-bottom: 1.5rem;
     background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px 0px;
     --xmargin: 1rem;
     --xmarginSmall: 1rem;
 }
@@ -35,18 +36,21 @@
     margin-right: 0.2rem;
 }
 
-.banner .category {
-    grid-area: 1 / 1 / 3 / 2;
+.banner .category, .evt-enrollsize, .evt-join {
     border-radius: 25px;
     padding: 0.8rem 1rem;
     color: white;
-    justify-self: start
+}
+
+.banner .category {
+    grid-area: 1 / 1 / 3 / 2;
+    justify-self: start;
 }
 
 .banner .evt-title {
     grid-area: 1 / 2 / 3 / 3;
     font-size: 22px;
-    justify-self: start
+    justify-self: start;
 }
 
 .banner .evt-enrollsize {
@@ -54,22 +58,78 @@
     justify-self: end;
 }
 
+.banner .evt-enrollsize.vacant {
+    background-color: var(--green-color);
+}
+
+.banner .evt-enrollsize.full {
+    background-color: var(--red-color);
+}
+
+.banner .evt-enrollsize i {
+    margin-left: 0.2rem;
+}
+
 .banner .evt-body {
-    padding: 1rem var(--xmargin);
+    margin: 0 var(--xmargin);
+    padding: 1rem 0;
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    grid-template-rows: 1fr max-content;
+    gap: 1rem 2rem;
+    max-width: 100%;
+}
+
+.banner .evt-enddate, .evt-join {
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.banner .evt-description, .evt-enddate {
+    border: 2px solid var(--light-grey);
+    border-radius: 15px;
+    padding: 1rem 1.5rem;
 }
 
 .banner .evt-description {
-    display: inline-block;
+    grid-area: 1 / 1 / 3 / 2;
+    min-height: 4rem;
+    max-height: 8rem;
+    overflow-y: auto;
 }
 
 .banner .evt-enddate {
-    display: inline-block;
+    grid-area: 1 / 2 / 2 / 3;
+    align-self: last baseline;
+}
+
+.banner .evt-join {
+    grid-area: 2 / 2 / 3 / 3;
+    border: none;
+    background-color: var(--main-color);
+    align-self: last baseline;
+}
+
+.banner .evt-join:hover {
+    background-color: var(--hover-dark-color);
+    transition: 500ms;
 }
 
 @media (max-width: 992px) {
+    .banner {margin-left: 2rem; margin-right: 2rem;}
     .banner .evt-heading { margin: 0 var(--xmarginSmall); }
-    .banner .evt-body { padding: 1rem var(--xmarginSmall); }
+    .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem;}
     .banner .category { grid-area: 1 / 1 / 2 / 2;}
     .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin-top: 0.6rem;}
     .banner .evt-enrollsize { grid-area: 1 / 3 / 2 / 4; }
+    .banner .evt-description { grid-area: 1 / 1 / 1 / 3;}
+    .banner .evt-enddate { 
+        grid-area: 2 / 1 / 3 / 2; 
+        justify-self: right;
+        padding: 0.8rem 1rem;
+    }
+    .banner .evt-enddate br { content: "";}
+    .banner .evt-enddate br:after { content: ": ";}
+    .banner .evt-join { grid-area: 2 / 2 / 3 / 3; padding: 0.8rem 1.5rem;}
 }
