--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -118,7 +118,7 @@
 
 @media (max-width: 992px) {
     .banner {margin-left: 2rem; margin-right: 2rem;}
-    .banner .evt-heading { margin: 0 var(--xmarginSmall); }
+    .banner .evt-heading { margin: 0 var(--xmarginSmall); padding-top: 1rem;}
     .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem;}
     .banner .category { grid-area: 1 / 1 / 2 / 2;}
     .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin-top: 0.6rem;}
