--- a/Views/Shared/NotFound.cshtml
+++ b/Views/Shared/NotFound.cshtml
@@ -1,7 +1,15 @@
-@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="~/css/notFound.css" asp-append-version="true">
+    </head>
 
-<h1>Not Found</h1>
-<p>@ViewBag.id</p>
+    <div class="container">
+        <img src="https://static.vecteezy.com/system/resources/previews/011/189/168/non_2x/illustrations-emotional-woman-for-oops-404-error-design-concept-landing-page-vector.jpg" alt="not_found">
+        <h2>Oops...Nothing was found.</h2>
+        <p>Now website don't have post</p>
+        <a class="create-post" asp-area="" asp-controller="Event" asp-action="Create">Create Post</a>
+    </div>
+</html>
