--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,6 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="~/css/notFound.css" asp-append-version="true">
+    </head>
 
-<p>dada</p>
+    <div class="container">
+        <img class="error" src="https://celtathens.com/wp-content/uploads/2024/02/errors.jpg" alt="error">
+        <h2>Oops.... Something went wrong</h2>
+        <p>Now website have an error</p>
+    </div>
+</html>
