refactor: html tag in Error and NotFound

--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,13 +1,9 @@
-﻿<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="~/css/notFound.css" asp-append-version="true">
-    </head>
+﻿@section Stylesheets {
+    <link rel="stylesheet" href="~/css/notFound.css" asp-append-version="true">
+}
 
-    <div class="container">
-        <img class="error" src="https://celtathens.com/wp-content/uploads/2024/02/errors.jpg" alt="error">
-        <h2>Oops.... Something went wrong</h2>
-        <p>Now website have an error</p>
-    </div>
-</html>
+<div class="container">
+    <img class="error" src="https://celtathens.com/wp-content/uploads/2024/02/errors.jpg" alt="error">
+    <h2>Oops.... Something went wrong</h2>
+    <p>Now website have an error</p>
+</div>
