--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -14,7 +14,7 @@
                         @Html.Raw(Category.GetIconHtml(category))
                         <span class="evt-category">@category</span>
                     </div>
-                    <span class="evt-title">@evt.title</span>
+                    <h2 class="evt-title">@evt.title</h2>
                     <span class="evt-enrollsize @(currentEnroll<evt.enrollSize?"vacant":"full")">
                         @currentEnroll/@evt.enrollSize <i class="fa-solid fa-user-group"></i>
                     </span>
@@ -29,7 +29,10 @@
     }
 }
 else {
-    <div>
-        <span>nothing</span>
+    <div class="no-event">
+        <img src="https://img.freepik.com/free-vector/group-therapy-illustration-concept_52683-45727.jpg?t=st=1709623373~exp=1709626973~hmac=78df7e8d67f4c5f6b0d06d0113b240ce820bf4d30f74051aaf195c505371a8d0" alt="no_event">
+        <h2>No events yet</h2>
+        <p>It has been quiet recently. Let's create some new events!</p>
+        <a class="create-event" asp-area="" asp-controller="Event" asp-action="Create">Create event</a>
     </div>
 }
