--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -1,14 +1,30 @@
 @import "./theme.css";
 
 .banner {
+    position: relative;
     display: block;
     margin-left: 2rem;
     margin-right: 3rem;
     margin-bottom: 1.5rem;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px 0px;
+    transition: 1s;
     --xmargin: 1rem;
     --xmarginSmall: 1rem;
+    --button-width: 9rem;
+    --button-height: 3.3rem;
+}
+
+.banner:hover {
+    transform:translateY(-0.1rem);
+    box-shadow: #cfe8ff 0px 0px 10px 5px;
+    transition: 500ms;
+}
+
+.banner a {
+    text-decoration: none;
+    cursor: default;
+    user-select: text;
 }
 
 .banner .evt-heading {
@@ -25,6 +41,7 @@
 }
 
 .banner .evt-heading * {
+    text-decoration: none;
     font-size: 18px;
 }
 
@@ -50,6 +67,7 @@
 .banner .evt-title {
     grid-area: 1 / 2 / 3 / 3;
     font-size: 22px;
+    color: black;
     justify-self: start;
 }
 
@@ -75,7 +93,7 @@
     padding: 1rem 0;
     display: grid;
     grid-template-columns: 1fr max-content;
-    grid-template-rows: 1fr max-content;
+    grid-template-rows: 1fr var(--button-height);
     gap: 1rem 2rem;
     max-width: 100%;
 }
@@ -87,13 +105,14 @@
 }
 
 .banner .evt-description, .evt-enddate {
+    color: black;
     border: 2px solid var(--light-grey);
     border-radius: 15px;
-    padding: 1rem 1.5rem;
 }
 
 .banner .evt-description {
     grid-area: 1 / 1 / 3 / 2;
+    padding: 1rem 1.5rem;
     min-height: 4rem;
     max-height: 8rem;
     overflow-y: auto;
@@ -101,14 +120,21 @@
 
 .banner .evt-enddate {
     grid-area: 1 / 2 / 2 / 3;
+    padding: 1rem 0;
+    width: var(--button-width);
     align-self: last baseline;
 }
 
 .banner .evt-join {
-    grid-area: 2 / 2 / 3 / 3;
+    position: absolute;
+    display: block;
+    right: calc(var(--xmargin) + 2px);
+    bottom: 1rem;
+    width: var(--button-width);
+    height: var(--button-height);
+    cursor: pointer;
     border: none;
     background-color: var(--main-color);
-    align-self: last baseline;
 }
 
 .banner .evt-join:hover {
@@ -154,19 +180,20 @@
 @media (max-width: 992px) {
     .banner {margin-left: 2rem; margin-right: 2rem;}
     .banner .evt-heading { margin: 0 var(--xmarginSmall); padding-top: 1rem;}
-    .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem;}
+    .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem; }
     .banner .category { grid-area: 1 / 1 / 2 / 2;}
     .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin-top: 0.6rem;}
     .banner .evt-enrollsize { grid-area: 1 / 3 / 2 / 4; }
     .banner .evt-description { grid-area: 1 / 1 / 1 / 3;}
     .banner .evt-enddate { 
         grid-area: 2 / 1 / 3 / 2; 
-        justify-self: right;
+        justify-self: left;
         padding: 0.8rem 1rem;
+        width:auto;
     }
     .banner .evt-enddate br { content: "";}
     .banner .evt-enddate br:after { content: ": ";}
-    .banner .evt-join { grid-area: 2 / 2 / 3 / 3; padding: 0.8rem 1.5rem;}
+    .banner .evt-join { padding: 0.8rem 1.5rem; width:auto; }
     .no-event { margin-left: 2rem; margin-right: 2rem; }
     .no-event img { width: 80%; }
 }
