--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -33,7 +33,7 @@
     padding: 0.6rem 0;
     display: grid;
     grid-template-columns: max-content 1fr max-content;
-    grid-template-rows: max-content max-content;
+    grid-template-rows: max-content max-content max-content;
     column-gap: 1rem;
     max-width: 100%;
     align-items: center;
@@ -132,13 +132,26 @@
     bottom: 1rem;
     width: var(--button-width);
     height: var(--button-height);
-    cursor: pointer;
     border: none;
-    background-color: var(--main-color);
 }
 
-.banner .evt-join:hover {
+.banner .evt-join.active.join {
+    background-color: var(--main-color);
+    cursor: pointer;
+}
+
+.banner .evt-join.active.join:hover {
     background-color: var(--hover-dark-color);
+    transition: 500ms;
+}
+
+.banner .evt-join.active.leave {
+    background-color: var(--red-color);
+    cursor: pointer;
+}
+
+.banner .evt-join.active.leave:hover {
+    background-color: var(--dark-red);
     transition: 500ms;
 }
 
@@ -182,7 +195,7 @@
     .banner .evt-heading { margin: 0 var(--xmarginSmall); padding-top: 1rem;}
     .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem; }
     .banner .category { grid-area: 1 / 1 / 2 / 2;}
-    .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin-top: 0.6rem;}
+    .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin: 0.6rem 0.6rem;}
     .banner .evt-enrollsize { grid-area: 1 / 3 / 2 / 4; }
     .banner .evt-description { grid-area: 1 / 1 / 1 / 3;}
     .banner .evt-enddate { 
