--- a/wwwroot/css/theme.css
+++ b/wwwroot/css/theme.css
@@ -8,6 +8,7 @@
     --bg-color: #f5f5f5;
     --green-color: #7ede00;
     --red-color: #ff3939;
+    --dark-red:#d22222;
     --main-color: var(--normal-blue);
     --border-color: var(--light-grey);
     --hover-border-color: var(--light-blue);
