--- a/wwwroot/css/banner.css
+++ b/wwwroot/css/banner.css
@@ -224,7 +224,7 @@
     .banner .evt-heading { margin: 0 var(--xmarginSmall); padding-top: 1rem;}
     .banner .evt-body { margin: 0 var(--xmarginSmall); column-gap: 1rem; }
     .banner .category { grid-area: 1 / 1 / 2 / 2;}
-    .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin: 0.6rem 0.6rem;}
+    .banner .evt-title { grid-area: 2 / 1 / 3 / 4; margin: 0.2rem 0.6rem; margin-top: 0.8rem;}
     .banner .evt-enrollsize { grid-area: 1 / 3 / 2 / 4; }
     .banner .evt-description { grid-area: 1 / 1 / 1 / 3;}
     .banner .evt-enddate { 
