feat: add event owner to banner (placeholder name)

--- a/Views/Shared/_EventBannerPartial.cshtml
+++ b/Views/Shared/_EventBannerPartial.cshtml
@@ -58,6 +58,13 @@
                         <span class="evt-enrollsize @(currentEnroll<evt.EnrollSize?"vacant":"full")">
                             @currentEnroll/@evt.EnrollSize <i class="fa-solid fa-user-group"></i>
                         </span>
+                        <div class="owner">
+                            <div class="owner-picture">
+                                <img alt="Owner picture" src="~/img/default.jpg" draggable="false">
+                            </div>
+                            @* <span class="owner-name">@evt.Owner.Name @evt.Owner.Surname</span> *@
+                            <span class="owner-name">Somethinglong SomethinglongToo</span>
+                        </div>
                     </div>
                     <div class="evt-body">
                         <span class="evt-description">@evt.Description</span>
