--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -155,11 +155,37 @@ header li a:hover {
   width: 2rem;
 }
 
+.sidebar .logout {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  bottom: 6rem;
+  box-sizing: border-box;
+}
+
+.sidebar .logout-button {
+  border-radius: 25px;
+  padding: 0.8rem 2rem;
+  transition: 500ms;
+  border: none;
+  color: var(--red-color);
+  background-color: white;
+  border: 2px solid var(--light-red);
+  cursor: pointer;
+}
+
 .sidebar ul a:hover, .sidebar ul .active a{
   padding-left: 4rem;
   color: var(--main-color);
   border-right: 1rem solid var(--main-color);
   transition: 300ms;
+}
+
+.sidebar .logout-button:hover {
+  color: white;
+  background-color: var(--red-color);
+  border-color: var(--red-color);
+  transition: 500ms;
 }
 
 @media (max-width: 992px) {
