--- a/wwwroot/css/theme.css
+++ b/wwwroot/css/theme.css
@@ -7,6 +7,7 @@
     --dark-blue: #006acd;
     --bg-color: #f5f5f5;
     --green-color: #7ede00;
+    --light-red: #ff8080;
     --red-color: #ff3939;
     --dark-red:#d22222;
     --main-color: var(--normal-blue);
